header alignment fix

--- a/src/SFA.DAS.EAS.Web/comt-assets/css/screen-ie8.css
+++ b/src/SFA.DAS.EAS.Web/comt-assets/css/screen-ie8.css
@@ -4938,6 +4938,10 @@ h2 .float-right {
   margin-top: 30px;
 }
 
+#approve-transfer-cohort .approve-transfer h2 {
+  margin-top: 0;
+}
+
 @media only screen and (max-device-width: 640px), only screen and (max-device-width: 667px), only screen and (max-width: 480px) {
   #apprentice-details .tableResponsive {
     margin-top: 30px;
