--- a/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.EAS.Web/src/sass/_custom.scss
@@ -857,9 +857,13 @@ h2{
     .hr-bottom{clear:both;}
     .error{
         .heading-medium{margin-top:0;}  
-        }  
+        }
+    
     .approve-transfer{
         margin-top:30px;
+        h2{
+            margin-top:0;
+        }
     }
  }
 
